# streamlit_vscode

./: pyproject.toml
src/streamlit_vscode/: __init__.py
